--- a/SynthTest/MainWindow.xaml
+++ b/SynthTest/MainWindow.xaml
@@ -22,14 +22,13 @@
 			<Slider Minimum="-1" Maximum="1" Value="{Binding Sequencer2}"></Slider>
 			<Slider Minimum="-1" Maximum="1" Value="{Binding Sequencer3}"></Slider>
 		</UniformGrid>
-		<!--<TextBlock>Attack</TextBlock>
-		<Slider Minimum="0" Maximum="2" Value="{Binding Attack}"></Slider>
-		<TextBlock>Decay</TextBlock>
-		<Slider Minimum="0" Maximum="2" Value="{Binding Decay}"></Slider>
-		<TextBlock>Sustain</TextBlock>
-		<Slider Minimum="0" Maximum="1" Value="{Binding Sustain}"></Slider>
-		<TextBlock>Release</TextBlock>
-		<Slider Minimum="0" Maximum="5" Value="{Binding Release}"></Slider>-->
+		<TextBlock>Envelope (ADSR)</TextBlock>
+		<UniformGrid Rows="1" Columns="4">
+			<Slider Minimum="0" Maximum="2" Value="{Binding Attack}"></Slider>
+			<Slider Minimum="0" Maximum="2" Value="{Binding Decay}"></Slider>
+			<Slider Minimum="0" Maximum="1" Value="{Binding Sustain}"></Slider>
+			<Slider Minimum="0" Maximum="5" Value="{Binding Release}"></Slider>
+		</UniformGrid>
 		<TextBlock>Low Pass</TextBlock>
 		<Slider Minimum="10" Maximum="10000" Value="{Binding LowPassCutoff}"></Slider>
 		<TextBlock>High Pass</TextBlock>
