Added extra modulation options to the VCO.

--- a/SynthTest/MainWindow.xaml
+++ b/SynthTest/MainWindow.xaml
@@ -44,7 +44,7 @@
 				</UniformGrid>
 			</StackPanel>
 		</DataTemplate>
-		<DataTemplate DataType="{x:Type synthTest:Vco1}">
+		<DataTemplate DataType="{x:Type synthTest:Vco}">
 			<DataTemplate.Resources>
 				<ObjectDataProvider x:Key="shapeEnum" MethodName="GetValues"
                             ObjectType="{x:Type System:Enum}">
@@ -55,13 +55,17 @@
 			</DataTemplate.Resources>
 			<StackPanel>
 				<TextBlock Text="Oscillator"/>
-				<UniformGrid Rows="2" Columns="3">
+				<UniformGrid Rows="2" Columns="5">
 					<TextBlock Text="Shape"/>
 					<TextBlock Text="Octave"/>
 					<TextBlock Text="Detune"/>
+					<TextBlock Text="Lfo Level"/>
+					<TextBlock Text="XMod Level"/>
 					<ComboBox ItemsSource="{Binding Source={StaticResource shapeEnum}}" SelectedValue="{Binding Path=Shape, Converter={StaticResource enumConverter}}"/>
 					<Slider Minimum="-4" Maximum="4" Value="{Binding Octave}"/>
-					<Slider Minimum="-2" Maximum="2" Value="{Binding Detune}"/>
+					<Slider Minimum="-0.5" Maximum="0.5" Value="{Binding Detune}"/>
+					<Slider Minimum="0" Maximum="1" Value="{Binding LfoLevel}"/>
+					<Slider Minimum="0" Maximum="1" Value="{Binding XModLevel}"/>
 				</UniformGrid>
 			</StackPanel>
 		</DataTemplate>
