Refactored the tables into their own static class, and improved the filter implementation.

--- a/SynthTest/MainWindow.xaml
+++ b/SynthTest/MainWindow.xaml
@@ -55,17 +55,19 @@
 			</DataTemplate.Resources>
 			<StackPanel>
 				<TextBlock Text="VFO"/>
-				<UniformGrid Rows="2" Columns="5">
+				<UniformGrid Rows="2" Columns="6">
 					<TextBlock Text="Shape"/>
 					<TextBlock Text="Octave"/>
 					<TextBlock Text="Detune"/>
 					<TextBlock Text="Lfo Level"/>
 					<TextBlock Text="XMod Level"/>
+					<TextBlock Text="Square PWM"/>
 					<ComboBox ItemsSource="{Binding Source={StaticResource shapeEnum}}" SelectedValue="{Binding Path=Shape, Converter={StaticResource enumConverter}}"/>
 					<Slider Minimum="-4" Maximum="4" Value="{Binding Octave}"/>
 					<Slider Minimum="-0.5" Maximum="0.5" Value="{Binding Detune}"/>
 					<Slider Minimum="0" Maximum="1" Value="{Binding LfoLevel}"/>
 					<Slider Minimum="0" Maximum="1" Value="{Binding XModLevel}"/>
+					<Slider Minimum="0" Maximum="1" Value="{Binding SquarePwm}"/>
 				</UniformGrid>
 			</StackPanel>
 		</DataTemplate>
