--- a/SynthTest/MainWindow.xaml
+++ b/SynthTest/MainWindow.xaml
@@ -129,9 +129,26 @@
 					<TextBlock Text="ADSR Level"/>
 					<TextBlock Text="Cutoff"/>
 					<ComboBox ItemsSource="{Binding Source={StaticResource filterType}}" SelectedValue="{Binding Path=FilterType, Converter={StaticResource enumConverter}}"/>
-					<Slider Minimum="0" Maximum="1" Value="{Binding LfoLevel}"/>
-					<Slider Minimum="0" Maximum="1" Value="{Binding AdsrLevel}"/>
+					<Slider Minimum="0" Maximum="4" Value="{Binding LfoLevel}"/>
+					<Slider Minimum="0" Maximum="4" Value="{Binding AdsrLevel}"/>
 					<Slider Minimum="-4" Maximum="4" Value="{Binding Cutoff}"/>
+				</UniformGrid>
+			</StackPanel>
+		</DataTemplate>
+		<DataTemplate DataType="{x:Type synthTest:PoliAmp}">
+			<StackPanel>
+				<TextBlock Text="Amplifier"/>
+				<UniformGrid Rows="2" Columns="5">
+					<TextBlock Text="Attack"/>
+					<TextBlock Text="Decay"/>
+					<TextBlock Text="Sustain"/>
+					<TextBlock Text="Release"/>
+					<TextBlock Text="LFO Level"/>
+					<Slider Minimum="0.01" Maximum="2" Value="{Binding Attack}"/>
+					<Slider Minimum="0.01" Maximum="2" Value="{Binding Decay}"/>
+					<Slider Minimum="0" Maximum="2" Value="{Binding Sustain}"/>
+					<Slider Minimum="0.01" Maximum="2" Value="{Binding Release}"/>
+					<Slider Minimum="0" Maximum="4" Value="{Binding LfoLevel}"/>
 				</UniformGrid>
 			</StackPanel>
 		</DataTemplate>
