Modified and improved testing harness. Starting to sound really nice!

--- a/SynthTest/MainWindow.xaml
+++ b/SynthTest/MainWindow.xaml
@@ -54,7 +54,7 @@
 				</ObjectDataProvider>
 			</DataTemplate.Resources>
 			<StackPanel>
-				<TextBlock Text="VFO"/>
+				<TextBlock Text="VCO"/>
 				<UniformGrid Rows="2" Columns="6">
 					<TextBlock Text="Shape"/>
 					<TextBlock Text="Octave"/>
@@ -115,23 +115,27 @@
 			</DataTemplate.Resources>
 			<StackPanel>
 				<TextBlock Text="Filter"/>
-				<UniformGrid Rows="4" Columns="4">
+				<UniformGrid Rows="4" Columns="5">
 					<TextBlock Text="Attack"/>
 					<TextBlock Text="Decay"/>
 					<TextBlock Text="Sustain"/>
 					<TextBlock Text="Release"/>
+					<TextBlock Text=""/>
 					<Slider Minimum="0.01" Maximum="2" Value="{Binding Attack}"/>
 					<Slider Minimum="0.01" Maximum="2" Value="{Binding Decay}"/>
 					<Slider Minimum="0" Maximum="2" Value="{Binding Sustain}"/>
 					<Slider Minimum="0.01" Maximum="2" Value="{Binding Release}"/>
+					<TextBlock Text=""/>
 					<TextBlock Text="Filter Type"/>
 					<TextBlock Text="LFO Level"/>
 					<TextBlock Text="ADSR Level"/>
 					<TextBlock Text="Cutoff"/>
+					<TextBlock Text="Resonance"/>
 					<ComboBox ItemsSource="{Binding Source={StaticResource filterType}}" SelectedValue="{Binding Path=FilterType, Converter={StaticResource enumConverter}}"/>
 					<Slider Minimum="0" Maximum="4" Value="{Binding LfoLevel}"/>
 					<Slider Minimum="0" Maximum="4" Value="{Binding AdsrLevel}"/>
 					<Slider Minimum="-4" Maximum="4" Value="{Binding Cutoff}"/>
+					<Slider Minimum="1" Maximum="40" Value="{Binding Resonance}"/>
 				</UniformGrid>
 			</StackPanel>
 		</DataTemplate>
